<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/m_context_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.licktrip.automaticfeeder.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp">

        <ScrollView
            android:id="@+id/scrollViewMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/generalLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewW1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/i_m_your_automatic_feeder_controller"
                    android:textColor="@color/yellow"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewW2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/info_text"
                    android:textColor="@color/yellow"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/textViewW3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/info_text2"
                    android:textColor="@color/yellow"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/sendOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:enabled="false"
                    android:onClick="sendMess"
                    android:text="@string/feed" />

                <!--<Button-->
                <!--android:id="@+id/testMess"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_marginTop="30dp"-->
                <!--android:enabled="true"-->
                <!--android:onClick="testMess"-->
                <!--android:text="Test Mess" />-->

                <!--<EditText-->
                <!--android:id="@+id/editTextTesting"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="@color/colorDirtyWhite"-->
                <!--android:enabled="true"-->
                <!--/>-->

                <TextView
                    android:id="@+id/textViewW4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/info_text3"
                    android:textColor="@color/yellow"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone"/>

                <Switch
                    android:id="@+id/switch_time1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:text="@string/time_1"
                    android:textColor="@color/colorDirtyWhite"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:theme="@style/CustomSwitch"
                    android:enabled="false"/>

                <Spinner
                    android:id="@+id/spinner_time1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:visibility="invisible" />

                <Switch
                    android:id="@+id/switch_time2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:text="@string/time_2"
                    android:textColor="@color/colorDirtyWhite"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:theme="@style/CustomSwitch"
                    android:enabled="false"/>

                <Spinner
                    android:id="@+id/spinner_time2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:visibility="invisible" />

                <Switch
                    android:id="@+id/switch_time3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:text="@string/time_3"
                    android:textColor="@color/colorDirtyWhite"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:theme="@style/CustomSwitch"
                    android:enabled="false"/>

                <Spinner
                    android:id="@+id/spinner_time3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:visibility="invisible" />

                <Switch
                    android:id="@+id/switch_time4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:text="@string/time_4"
                    android:textColor="@color/colorDirtyWhite"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:theme="@style/CustomSwitch"
                    android:enabled="false"/>

                <Spinner
                    android:id="@+id/spinner_time4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:visibility="invisible" />

                <Switch
                    android:id="@+id/switch_time5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:text="@string/time_5"
                    android:textColor="@color/colorDirtyWhite"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:theme="@style/CustomSwitch"
                    android:enabled="false"/>

                <Spinner
                    android:id="@+id/spinner_time5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:visibility="invisible" />

                <Switch
                    android:id="@+id/switch_feed_q"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:text="@string/quantity"
                    android:textColor="@color/colorDirtyWhite"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:theme="@style/CustomSwitch"
                    android:enabled="false"/>

                <TextView
                    android:id="@+id/textView_seek_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorRed"
                    android:text="@string/my_value"
                    android:thumbOffset="1dp"
                    android:visibility="invisible"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toRightOf="@+id/switch_feed_q"/>

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/seek_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:theme="@style/CustomSeekBar"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/setSettingBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:enabled="false"
                    android:onClick="setSettings"
                    android:text="@string/set_settings" />

                <TextView
                    android:id="@+id/textViewW5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/info_text4"
                    android:textColor="@color/yellow"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/setDefaultBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:enabled="false"
                    android:onClick="setDefault"
                    android:text="@string/my_default" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
